[gd_scene load_steps=9 format=2]

[ext_resource path="res://imports/spaceshooter/PNG/Enemies/enemyBlack1.png" type="Texture" id=1]
[ext_resource path="res://Enemy/Text_Enemy/enemy3d.gd" type="Script" id=2]
[ext_resource path="res://imports/SpaceMono-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 25
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 25
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 25
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 25
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 25
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="Enemy" type="Spatial"]
script = ExtResource( 2 )
blue = Color( 0.729412, 0.729412, 0.729412, 1 )
green = Color( 0.921569, 0.803922, 0.0470588, 1 )
red = Color( 0.564706, 0.564706, 0.564706, 1 )

[node name="Sprite3D" type="Sprite3D" parent="."]
visible = false
texture = ExtResource( 1 )

[node name="CenterRichBody" type="RichTextLabel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -108.5
margin_top = -60.0
margin_right = 108.5
margin_bottom = 60.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]type this![/center]"
text = "type this!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PowerUpText" type="RichTextLabel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 70.0
margin_top = 599.0
margin_right = -794.0
margin_bottom = -1.0
rect_rotation = -25.2938
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Power Up[/center]"
text = "Power Up"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DefenceText" type="RichTextLabel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 94.0
margin_top = 49.0
margin_right = -772.0
margin_bottom = -551.0
rect_rotation = 25.7544
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
bbcode_text = "[center]Defence[/center]"
text = "Defence"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttackOneText" type="RichTextLabel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 765.0
margin_top = 222.0
margin_right = -89.0
margin_bottom = -378.0
rect_rotation = -30.9313
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]Attack One[/center]"
text = "Attack One"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttackTwoText" type="RichTextLabel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 787.0
margin_top = 302.0
margin_right = -50.0
margin_bottom = -298.0
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
bbcode_text = "[center]Attack Two[/center]"
text = "Attack Two"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttackThreeText" type="RichTextLabel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 799.0
margin_top = 419.0
margin_right = -101.0
margin_bottom = -181.0
rect_rotation = 30.6497
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
bbcode_text = "[center]Attack Two[/center]"
text = "Attack Two"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 7.0

[node name="AttackOneTimer" type="Timer" parent="Timer"]
wait_time = 15.0

[node name="AttackTwoTimer" type="Timer" parent="Timer"]
wait_time = 15.0

[node name="AttackThreeTimer" type="Timer" parent="Timer"]
wait_time = 15.0

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer/AttackOneTimer" to="." method="_on_AttackOneTimer_timeout"]
[connection signal="timeout" from="Timer/AttackTwoTimer" to="." method="_on_AttackTwoTimer_timeout"]
[connection signal="timeout" from="Timer/AttackThreeTimer" to="." method="_on_AttackThreeTimer_timeout"]
